4단계 - 자동차 경주(우승자) 요구사항 구현 (#5972)
* refactor:
- 피드백 반영
- 패키지 분리 기준을 step에서 미션으로 변경

* docs: 4단계 요구사항 내용 추가

* feat: Car 클래스에 이름 필드와 제약조건 추가

* feat: 자동차 출력시 이름도 같이 출력되도록 수정

* feat: 우승자 출력 로직 추가

* refactor:
- InputView에서 Scanner를 가지고 있도록 설정
  - static 이슈로 InputViewTest는 제거
- StringUtils 클래스 제거
- name 필드를 저장할 CarName 객체 생성
  - validateCarName 메서드를 CarName 하위로 이동
- Car의 게터 없애고 maxPosition인지 확인하는 메서드 (isMaxPosition) 추가
- 우승자 선정 로직을 Winners 클래스 내에서 해결, WinnersTest 추가